tango/tango-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tango
  namespace: tango
spec:
  selector:
    app: tango
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
