tango/tango-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tango-ingress
  namespace: tango
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tango.jakob-lingel.dev
    secretName: tango-tls
  rules:
  - host: tango.jakob-lingel.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tango
            port:
              number: 80
